<resources>
    <string name="app_name">QuizOff</string>
    <string name="preference_file_key">Score Preferences</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="config">Start widget</string>
    <string name="hint_type_username">Type the username of your friend</string>
    <string name="search">Search</string>
    <string name="no_friend_found_yet">No friend found yet</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="choose_email">Choose an email</string>
    <string name="choose_password">Choose a password</string>
    <string name="mock_question">This is a very difficult question</string>
    <string name="dont_have_account">Dont have an account? Sign up now for free!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="save">Save</string>
    <string name="add_friend">add friend</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="friends">Friends</string>
    <string name="challenges">Challenges</string>
    <string name="challenge">Challenge</string>
    <string name="notifications">Notifications</string>
    <string name="friends_name">Friends Name</string>
    <string name="reply">Reply</string>
    <string name="delete">Delete</string>
    <string name="notification">Notification 1</string>
    <string name="empty">Empty</string>
    <string name="friend_found">Friend found</string>
    <string name="no_friend_found">No friend found</string>
    <string name="accept">Accept</string>
    <string name="no_user_with_username">There is no user with the given username</string>
    <string name="this_is_ur_username">This is your username!Add someone else</string>
    <string name="type_username_then_search">Please type a username and then press search</string>
    <string name="already_friends">You are already friends with this user</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="find_valid_friend">Find a valid friend first</string>
    <string name="user_required">User is required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_required">Password is required</string>
    <string name="user_created">User created</string>
    <string name="email_already_used">There already is a user with that email</string>
    <string name="try_again_later">There is an ongoing challenge with that friend! Try again later.</string>
    <string name="really_exit">Really Exit?</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="sure_you_wanna_exit_score_0">Are you sure you want to exit? The challenge will be sent with your score equal to zero!!</string>
    <string name="sure_you_wanna_exit_sign_out">Are you sure ? You will sign out from this account</string>
    <string name="sure_you_wanna_exit_lose_challenge">Are you sure you want to exit? Your score will be set to zero and you will probably lose this chalenge!</string>
    <string name="tie">Its a tie</string>
    <string name="ended_in_tie">It ended in a tie with </string>
    <string name="ended_in_loss">You lost from </string>
    <string name="loss">I am sorry you lost</string>
    <string name="ended_in_win">You won against </string>
    <string name="win">Congrats you won</string>
    <string name="username_required">Username required</string>
    <string name="you_were_signed_out">You were signed out from your account. Please log in again.</string>
    <string name="sent_challenge_score_0">Your challenge was sent with your score equal to 0</string>

</resources>
