<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context="com.example.android.quizoff.MainQuizActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:id="@+id/navigate_friends_activity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_friend"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:id="@+id/navigate_add_friend_activity"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_requests"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:id="@+id/navigate_friend_requests_activity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenges"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:id="@+id/navigate_challenges_activity"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:padding="20dp"
            android:layout_margin="2dp"
            android:id="@+id/navigate_notifications_activity"/>

    </LinearLayout>




</LinearLayout>
