<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:elevation="5dp"
    android:background="@color/colorPrimaryDark"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/friendrequest_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_weight="1"
        android:text="@string/friends_name" />

    <TextView
        android:id="@+id/accept_friend_request"
        android:layout_width="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/accept"/>

    <TextView
        android:id="@+id/delete_friend_request"
        android:layout_width="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>


</LinearLayout>