<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context="com.example.android.quizoff.LoginActivity">


    <EditText
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/password_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:text="@string/login"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? Sign up" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="now"
            android:padding="6dp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/to_go_sign_up_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="for free!"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/login_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>




</LinearLayout>
